--- a/Homework 5.Rmd
+++ b/Homework 5.Rmd
@@ -18,8 +18,12 @@ iris_with_missing = iris %>%
 ```
 
 ```{r Problem 1}
-sepal_length_avg<-mean(iris_with_missing$Sepal.Length, na.rm = TRUE)
+
 iris_with_missing<-iris_with_missing %>%
-mutate(Sepal.Length=ifelse(is.na(Sepal.Length), sepal_length_avg,Sepal.Length)) #replacing the NAs in the column Sepal.Length with the average of values in that column 
+  mutate(Sepal.Length=ifelse(is.na(Sepal.Length), mean(Sepal.Length, na.rm = TRUE) ,Sepal.Length)) %>%
+mutate(Sepal.Width=ifelse(is.na(Sepal.Width), mean(Sepal.Width, na.rm = TRUE) ,Sepal.Width)) %>% #replacing the NAs in the column Sepal.Width with the average of values in that column 
+mutate(Sepal.Width=ifelse(is.na(Sepal.Width), mean(Sepal.Width, na.rm = TRUE) ,Sepal.Width))
+  
+summary(iris_with_missing)
 ```
 
