--- a/Homework 5.Rmd
+++ b/Homework 5.Rmd
@@ -19,11 +19,35 @@ iris_with_missing = iris %>%
 
 ```{r Problem 1}
 
-iris_with_missing<-iris_with_missing %>%
-  mutate(Sepal.Length=ifelse(is.na(Sepal.Length), mean(Sepal.Length, na.rm = TRUE) ,Sepal.Length)) %>%
-mutate(Sepal.Width=ifelse(is.na(Sepal.Width), mean(Sepal.Width, na.rm = TRUE) ,Sepal.Width)) %>% #replacing the NAs in the column Sepal.Width with the average of values in that column 
-mutate(Sepal.Width=ifelse(is.na(Sepal.Width), mean(Sepal.Width, na.rm = TRUE) ,Sepal.Width))
-  
-summary(iris_with_missing)
+replace_missing = function(x) {
+  if (is.numeric(x)){ 
+    x = replace_na(x, mean(x, na.rm = TRUE))}
+   else if (is.character(x)) {
+     x = replace_na(x,"virginica")}
+  }
+ 
+fixed_iris = map(iris_with_missing, replace_missing) %>% 
+  as_tibble() 
+```
+
+```{r Problem 2}
+
+files = list.files(path = "./data", pattern = NULL, all.files = FALSE,
+           full.names = FALSE, recursive = FALSE,
+           ignore.case = FALSE, include.dirs = FALSE, no.. = FALSE)
+
+data = data_frame(file_name = files) %>% 
+    mutate(file_contents = map(file_name, ~read_csv(file.path("./data", .)))) %>%
+  unnest() %>% 
+pivot_longer(week_1:week_8, names_to = "week",
+   values_to = "measurement") %>% 
+  separate(file_name, sep = ".c", into = c("file_name", "remove")) %>% select(-remove) %>% 
+  separate(file_name, into = c("group", "subject_id"), sep = "_") %>% 
+  mutate(
+    group = recode(group,
+         `con` = "control",
+         `exp` = "experimental")
+    )
+
 ```
 
