--- a/Homework 5.Rmd
+++ b/Homework 5.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Homework 5"
 author: "Dania Jafar"
-date: "11/2/2019"
+date: "11/11/2019"
 output: html_document
 ---
 
@@ -16,25 +16,25 @@ iris_with_missing = iris %>%
   map_df(~replace(.x, sample(1:150, 20), NA)) %>%
   mutate(Species = as.character(Species))
 ```
-
+# Problem 1
 ```{r Problem 1}
 
+#replacing missing values with the appropriate values 
 replace_missing = function(x) {
   if (is.numeric(x)){ 
     x = replace_na(x, mean(x, na.rm = TRUE))}
    else if (is.character(x)) {
      x = replace_na(x,"virginica")}
   }
- 
+ #creating a table that shas the missing values filled in
 fixed_iris = map(iris_with_missing, replace_missing) %>% 
   as_tibble() 
 ```
 
+# Problem 2
 ```{r Problem 2}
 
-files = list.files(path = "./data", pattern = NULL, all.files = FALSE,
-           full.names = FALSE, recursive = FALSE,
-           ignore.case = FALSE, include.dirs = FALSE, no.. = FALSE)
+files = list.files(path = "./data") 
 
 data = data_frame(file_name = files) %>% 
     mutate(file_contents = map(file_name, ~read_csv(file.path("./data", .)))) %>%
@@ -47,7 +47,72 @@ pivot_longer(week_1:week_8, names_to = "week",
     group = recode(group,
          `con` = "control",
          `exp` = "experimental")
-    )
+    ) %>% 
+mutate_all(~gsub("week_", "", .)) %>% 
+  #convert week and measurement variables to numeric so they can be graphed correctly
+mutate(week = as.numeric(week)) %>% 
+mutate(measurement = as.numeric(measurement))
+  
+  #creating a plot that graphs week by measurement
+data %>%
+  ggplot(aes(x = week, y = measurement , color = group, group = subject_id)) + 
+  geom_path() 
+```
+# Problem 3
+```{r Problem 3}
+prob3_regression = function(n = 30, beta0 = 2, beta1 = 0) {
+  
+  sim_data = tibble(
+    x = rnorm(n, mean = 1, sd = sqrt(50)),
+    y = beta0 + beta1 * x + rnorm(n, 0, sqrt(50))
+  )
+  
+  ls_fit = lm(y ~ x, data = sim_data)
+  
+  tibble(
+    beta0_hat = coef(ls_fit)[1],
+    beta1_hat = coef(ls_fit)[2]
+  )
+}
+
 
 ```
+
+```{r}
+library(broom)
+#setting up a regression model
+sim_regression = function(n = 30, beta0 = 2, beta1) {
+sim_data = tibble(
+x = rnorm(n =30),
+y = 2 + beta1 * x + rnorm(30, 0, 50)
+)
+
+ls_fit = tidy(lm(y ~ x, data = sim_data)) %>% 
+  filter(term == "x")
+
+apple = tibble (
+beta1_hat = ls_fit$estimate,
+p_value = ls_fit$p.value
+)
+print(apple)
+}
+```
+
+
+```{r}
+sim_results = 
+tibble(beta1 = c(1, 2, 3, 4, 5, 6)) %>% 
+mutate(
+output_lists = map(.x = beta1, ~rerun(10000, sim_regression(beta1 = .x))),
+estimate_dfs = map(output_lists, bind_rows)) %>% 
+select(-output_lists) %>% 
+unnest(estimate_dfs)
+view(sim_results)
+
+sim_results %>% 
+  ggplot(aes(x = beta0_hat, y = beta1_hat)) + 
+  geom_point()
+```
+```
+
 
