--- a/Homework 5.Rmd
+++ b/Homework 5.Rmd
@@ -2,14 +2,17 @@
 title: "Homework 5"
 author: "Dania Jafar"
 date: "11/11/2019"
-output: html_document
+output: github_document
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 
 library(tidyverse)
+```
 
+
+```{r setup}
 set.seed(10)
 
 iris_with_missing = iris %>% 
@@ -59,31 +62,13 @@ data %>%
   geom_path() 
 ```
 # Problem 3
-```{r Problem 3}
-prob3_regression = function(n = 30, beta0 = 2, beta1 = 0) {
-  
-  sim_data = tibble(
-    x = rnorm(n, mean = 1, sd = sqrt(50)),
-    y = beta0 + beta1 * x + rnorm(n, 0, sqrt(50))
-  )
-  
-  ls_fit = lm(y ~ x, data = sim_data)
-  
-  tibble(
-    beta0_hat = coef(ls_fit)[1],
-    beta1_hat = coef(ls_fit)[2]
-  )
-}
-
-
-```
-
 ```{r}
+set.seed(50)
 library(broom)
 #setting up a regression model
-sim_regression = function(n = 30, beta0 = 2, beta1) {
+prob3_regression = function(n = 30, beta0 = 2, beta1) {
 sim_data = tibble(
-x = rnorm(n =30),
+x = rnorm(n),
 y = 2 + beta1 * x + rnorm(30, 0, 50)
 )
 
@@ -103,16 +88,31 @@ print(apple)
 sim_results = 
 tibble(beta1 = c(1, 2, 3, 4, 5, 6)) %>% 
 mutate(
-output_lists = map(.x = beta1, ~rerun(10000, sim_regression(beta1 = .x))),
-estimate_dfs = map(output_lists, bind_rows)) %>% 
-select(-output_lists) %>% 
-unnest(estimate_dfs)
-view(sim_results)
+output_list = map(.x = beta1, ~rerun(10, sim_regression(beta1 = .x))),
+estimate_dfs = map(output_list, bind_rows)) %>% 
+unnest(estimate_dfs) %>% 
+select(beta1,beta1_hat,p_value)
 
 sim_results %>% 
-  ggplot(aes(x = beta0_hat, y = beta1_hat)) + 
+  ggplot(aes(x = beta1, y = beta1_hat)) + 
   geom_point()
+
+#Now we are going to create a function for the proportion of times the null was rejected. 
+
+proportion_reject = 
+  sim_results %>% 
+  group_by(beta1) %>%
+  summarize((reject = length(p_value <0.05)) #at which p-value we want the function to reject
+total = n()) %>% 
+  mutate(proportion = reject/ total)
+
+
+#I am going to now add a regression line 
+ggplot(reject_proportion, aes(x = beta1, y = proportion)) + geom_point() + geom_smooth() + labs (y = "The Proportion the Null was Rejected", x = Number, title = "Power vs. Effect Size")
+
+
 ```
-```
+
+
 
 
